--- a/Connect_3/app/src/main/res/layout/activity_main.xml
+++ b/Connect_3/app/src/main/res/layout/activity_main.xml
@@ -31,9 +31,9 @@
             android:layout_margin="20dp"
             android:layout_row="0"
             android:onClick="takeTurn"
+            android:tag="0_0"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:color/transparent"
-            android:tag="0_0"/>
+            app:srcCompat="@android:color/transparent" />
 
         <ImageView
             android:id="@+id/cell_0_1"
@@ -46,8 +46,8 @@
             android:layout_marginTop="20dp"
             android:layout_row="0"
             android:onClick="takeTurn"
-            app:srcCompat="@android:color/transparent"
-            android:tag="0_1"/>
+            android:tag="0_1"
+            app:srcCompat="@android:color/transparent" />
 
         <ImageView
             android:id="@+id/cell_0_2"
@@ -58,8 +58,8 @@
             android:layout_marginTop="20dp"
             android:layout_row="0"
             android:onClick="takeTurn"
-            app:srcCompat="@android:color/transparent"
-            android:tag="0_2"/>
+            android:tag="0_2"
+            app:srcCompat="@android:color/transparent" />
 
         <ImageView
             android:id="@+id/cell_1_0"
@@ -70,9 +70,9 @@
             android:layout_marginTop="12dp"
             android:layout_row="1"
             android:onClick="takeTurn"
+            android:tag="1_0"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:color/transparent"
-            android:tag="1_0"/>
+            app:srcCompat="@android:color/transparent" />
 
         <ImageView
             android:id="@+id/cell_1_1"
@@ -84,8 +84,8 @@
             android:layout_marginTop="12dp"
             android:layout_row="1"
             android:onClick="takeTurn"
-            app:srcCompat="@android:color/transparent"
-            android:tag="1_1"/>
+            android:tag="1_1"
+            app:srcCompat="@android:color/transparent" />
 
         <ImageView
             android:id="@+id/cell_1_2"
@@ -96,8 +96,8 @@
             android:layout_marginTop="12dp"
             android:layout_row="1"
             android:onClick="takeTurn"
-            app:srcCompat="@android:color/transparent"
-            android:tag="1_2"/>
+            android:tag="1_2"
+            app:srcCompat="@android:color/transparent" />
 
         <ImageView
             android:id="@+id/cell_2_0"
@@ -108,9 +108,9 @@
             android:layout_marginTop="12dp"
             android:layout_row="2"
             android:onClick="takeTurn"
+            android:tag="2_0"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@android:color/transparent"
-            android:tag="2_0"/>
+            app:srcCompat="@android:color/transparent" />
 
         <ImageView
             android:id="@+id/cell_2_1"
@@ -121,8 +121,8 @@
             android:layout_marginTop="12dp"
             android:layout_row="2"
             android:onClick="takeTurn"
-            app:srcCompat="@android:color/transparent"
-            android:tag="2_1"/>
+            android:tag="2_1"
+            app:srcCompat="@android:color/transparent" />
 
         <ImageView
             android:id="@+id/cell_2_2"
@@ -133,9 +133,45 @@
             android:layout_marginTop="12dp"
             android:layout_row="2"
             android:onClick="takeTurn"
-            app:srcCompat="@android:color/transparent"
-            android:tag="2_2"/>
+            android:tag="2_2"
+            app:srcCompat="@android:color/transparent" />
 
     </GridLayout>
+
+    <LinearLayout
+        android:id="@+id/winnerLayout"
+        android:layout_width="195dp"
+        android:layout_height="142dp"
+        android:layout_margin="10dp"
+        android:background="@android:color/holo_orange_light"
+        android:orientation="vertical"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498">
+
+        <TextView
+            android:id="@+id/winnerName"
+            android:layout_width="match_parent"
+            android:layout_height="94dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:textSize="18sp" />
+
+        <Button
+            android:id="@+id/playAgainButton"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="40dp"
+            android:layout_weight="1"
+            android:onClick="cleanBoard"
+            android:text="Play Again!"
+            android:textSize="12sp" />
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
